--- a/src/WebDAV-AudioPlayer/UI/MainForm.resx
+++ b/src/WebDAV-AudioPlayer/UI/MainForm.resx
@@ -124,84 +124,87 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAI
-        EQAAAk1TRnQBSQFMAgEBBAEAAfgBAAH4AQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AbgAB3gHnAe8B/wHG
-        AdYB3gH/A/cB/zQAA+cB/wPWAf8D1gH/A9YB/wPWAf8D1gH/A9YB/wPWAf8D1gH/A9YB/wPnAf8MAAG9
-        Ac4BpQH/ATMBhAEAAf8BMwGEAQAB/wEzAYQBAAH/ATMBhAEAAf8BMwGEAQAB/wEzAYQBAAH/ATMBhAEA
-        Af8BMwGEAQAB/wEzAYQBAAH/ATMBhAEAAf8BMwGEAQAB/wEzAYQBAAH/ATMBhAEABf8UAAj/A/cB/wG1
-        Aq0B/wO1Bf8cAAT/AVwB3gH3Af8BnAHWAecB/wHOAtYB/wHnAu8B/wHnAu8B/wG9Ad4B5wH/AYwB1gHv
-        Af8BVAHOAecB/wHnAu8J/xQAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
-        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAAB7wH3Ae8B/wEzAYQBAAH/
-        ATMBhAEAAf8BMwGEAQAB/wErAVwBAAH/AUwBlAECAf8BRAGUAQIB/wFEAYwBAgH/AUQBjAECAf8BOwGE
-        AQIB/wE7AYQBAgH/ATsBXAECAf8BIwFcAQAB/wEzAYQBAAH/ATMBhAEAAf8BMwGEAQAB/wgACP8DrQH/
-        AcYCvQH/A60B/wG9Aa0BtQH/AQABpQErAf8BpQGcAaUB/wNcAf8D9wH/GAABlAHWAe8B/wFUAd4B9wH/
-        AZwB1gHnAf8BOwGUAa0B/wFEAbUBxgH/ATsBvQHWAf8BMwHGAd4B/wErAc4B7wH/ATsBzgHeAf8BhAHW
-        Ae8B/wPnAf8D9wX/EAAB9wHvAecB/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
-        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAFUAZwBEgH/ATMBhAEAAf8BMwGE
-        AQAB/wErAVwBAAH/AucB3gX/A/cB/wP3Af8D7wH/A+8B/wPnBf8BKwFcAQAB/wEzAYQBAAH/ATMBhAEA
-        Af8BMwGEAQAF/wHOAsYB/wO1Af8BvQK1Af8B5wLeAf8B9wLvAf8B3gLWAf8BzgG1Ab0B/wEAAd4BMwH/
-        A5wB/wNcAf8DhAH/A60F/wwAAcYB3gHvAf8BXAHeAv8BVAHeAfcB/wGlAdYB5wH/ASMBlAGtAf8BOwG1
-        Ac4B/wE7Ab0B1gH/ATMBxgHeAf8BKwHOAe8B/wFEAdYB7wH/AYQB3gHvAf8D7wH/A/cJ/wwAAfcB7wHn
-        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
-        AdYBzgH/AecB1gHOAf8D1gH/CAABOwGMAQAB/wEzAYQBAAH/ATMBhAEAAf8BRAGMAQoB/wP3Af8C9wHv
-        Af8D9wH/A/cB/wPvAf8D7wH/A+8F/wP3Af8BIwFUAQAB/wEzAYQBAAH/ATMBhAEAAf8DrQH/AdYCzgH/
-        Ae8C3gL/AvcC/wL3Av8C9wH/AdYCzgH/AaUCnAH/A4wB/wPvAf8D5wH/A5wB/wOEAf8DVAH/A+8B/wgA
-        AaUB1gHvAf8BhAHeAv8BhAHnAv8BpQHWAe8B/wEjAZQBrQH/ATsBtQHGAf8BOwG9AdYB/wE7AcYB5wH/
-        ATMBzgHvAf8BTAHWAe8B/wGMAd4B7wH/A/cN/wwAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
-        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABOwGM
-        AQAB/wEzAYQBAAH/ASsBXAEAAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wPvAf8D7wH/Ad4B5wHWAf8D9wH/
-        A/cB/wFcAZwBKwH/ASsBhAEAAf8BMwGEAQAB/wOlAf8BzgLGAf8DvQH/Aa0CpQH/A6UB/wO9Af8DzgH/
-        A84B/wO9Af8DtQH/A70B/wPvAf8D3gH/A5QB/wOcAf8D1gH/BAABpQHWAe8B/wGMAecC/wGMAecC/wGc
-        Ad4B7wH/ASsBlAGtAf8BOwGtAcYB/wFEAcYB1gH/AUQBzgHnAf8BRAHWAe8B/wFUAd4B7wH/AYwB3gHv
-        Df8QAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
-        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAATsBjAEAAf8BMwGEAQAB/wGcAb0BVAH/A/cB/wP3
-        Af8D9wH/A/cB/wP3Af8D7wH/ASsBXAEAAf8BKwGEAQAB/wP3Af8D9wH/A/cB/wErAVwBAAH/ATMBhAEA
-        Bf8DvQH/As4B1gX/A94B/wPeAf8B7wLnAf8B5wLeAf8D1gH/A84B/wPGAf8CrQGlAf8DlAX/A94B/wPW
-        Af8EAAGtAd4B7wH/AZQB5wL/AZwB7wL/AZQB7wL/ASsBlAGtAf8BOwGtAcYB/wFMAcYB3gH/AUwBzgHn
-        Af8BTAHWAe8B/wGEAd4B9wH/Ac4B5wHvBf8YAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
-        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAATsBjAEA
-        Af8BKwGEAQAJ/wP3Af8D9wH/A/cB/wHWAd4BzgH/ASsBXAEAAf8BjAGtATsB/wEzAYQBAAH/A/cB/wL3
-        Ae8B/wPvAf8BrQHGAZQB/wErAYQBAAH/DAAD5wH/A70B/wHnAu8N/wPvAf8D5wH/A94B/wPOAf8DvQH/
-        A94B/wP3Af8EAAGtAd4B7wH/AZwB5wL/AaUB9wL/Aa0B9wL/ASsBlAGtAf8BRAGtAcYB/wFUAcYB3gH/
-        AVwB1gHnAf8BXAHeAfcB/wGlAecB9wX/HAAB9wHvAecB/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
-        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAE7AYwBAAH/
-        AdYB5wHGDf8BRAGMAQAB/wErAYQBAAH/AZQBrQFEAf8D9wH/A/cB/wL3Ae8B/wPvAf8D7wH/A+8B/wPv
-        Af8BKwFcAQAB/xgAA9YB/wO9Af8DXAH/AbUCvQH/A8YB/wPeAf8D7wH/EAABrQHeAe8B/wGcAe8C/wGt
-        AfcC/wHGAfcC/wEzAZwBtQH/AUwBtQHGAf8BXAHOAd4B/wGEAdYB7wH/AYQB3gH3Af8BrQHvAfcB/yAA
-        AfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHW
-        Ac4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABOwGMAQAB/wFEAYQBGgH/A+8B/wPvAf8D7wH/AYwBrQE7
-        Af8BKwFcAQAB/wEzAYQBAAH/Aa0BxgGMAf8D9wH/AvcB7wH/A/cB/wP3Cf8BIwFUAQAB/0QAAbUB3gH3
-        Af8BnAHvAv8BtQH3Av8B1gP/ATMBnAG1Af8BTAG1Ac4B/wGEAc4B3gH/AYwB3gHvAf8BlAHnAfcB/wG9
-        Ae8C/yAAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
-        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABOwGMAQAB/wEjAUwBAAH/AecB7wHnAf8D7wH/
-        AvcB7wH/A/cB/wP3Af8D9wH/Ac4B3gG9Af8BKwFcAQAB/wErAYQBAAH/A/cB/wP3Af8D9wH/ATsBhAEA
-        Af8BMwGEAQAB/0QAAbUB5wH3Af8BnAHvAv8BtQH3Av8B3gP/ATsBnAG1Af8BVAG9Ac4B/wGMAdYB5wH/
-        AZQB3gHvAf8BnAHnAfcB/wHOAfcC/yAAHP8DtQH/A60B/wOtAf8D7wH/CAABOwGMAQAB/wEzAYQBAAH/
-        ASsBVAEAAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wP3Af8BXAGlASMB/wErAVwBAAH/AvcB7wH/A/cB/wLn
-        AdYB/wErAVwBAAH/ATMBhAEAAf9EAAG1AecB9wH/AZwB7wL/AbUB9wb/AUQBpQG9Af8BhAHGAdYB/wGU
-        AdYB5wH/AZwB3gHvAf8BpQHnAfcB/wHOAfcC/yAAHP8DzgH/A+8B/wPWBf8IAAE7AYwBAAH/ATMBhAEA
-        Af8BKwFcAQAB/wHOAdYBvQH/A/cB/wP3Af8D7wH/A/cB/wP3Af8D9wH/AvcB7wH/A+8B/wPvAf8BKwFU
-        AQAB/wEzAYQBAAH/ATMBhAEAAf9EAAG9AecB9wH/AZwB7wL/AbUB9wb/AVQBtQHGAf8BjAHOAd4B/wGl
-        AecB9wH/Aa0B7wH3Af8BrQHvAfcB/wHWAfcC/yAABP8EAAT/BAAE/wQABP8DxgH/A84F/wwAATsBjAEA
-        Af8BMwGEAQAB/wEzAYQBAAH/ASMBVAEABf8D9wH/A+8B/wP3Af8D9wH/A/cF/wPvAf8BrQHGAZQB/wEr
-        AYQBAAH/ATMBhAEAAf8BMwGEAQAB/0QAAb0B5wH3Af8BnAHvAv8BzgP/AZwBzgHeAf8BlAHeAecB/wGt
-        Ae8B9wH/AbUB7wL/AcYB9wL/Ad4D/wHeA/8gAAPWAf8D9wH/A9YB/wP3Af8D1gH/A/cB/wPWAf8DxgX/
-        EAABrQHGAYwB/wEzAYQBAAH/ATMBhAEAAf8BKwGEAQAB/wGcAbUBVAH/A+8B/wPvAf8D9wH/A/cB/wP3
-        Bf8D9wH/ASsBXAEAAf8BMwGEAQAB/wEzAYQBAAH/ATMBhAEAAf9EAAG9AecB9wH/AbUB9wL/AaUB3gHn
-        Af8BvQHvAfcB/wG9AfcC/wGtAe8B9wH/AZQB5wH3Af8BxgLvAf8B5wL3Bf9YAAEzAYQBAAH/ATMBhAEA
-        Af8BMwGEAQAB/wErAVwBAAH/ASsBXAEAAf8BKwFcAQAB/wErAVwBAAH/ASsBXAEAAf8BKwFUAQAB/wEj
-        AVQBAAH/ASMBVAEAAf8BKwGEAQAB/wEzAYQBAAH/ATMBhAEAAf8BvQHOAaUB/0QAAfcD/wHeAe8B9wX/
-        eAABrQHGAYwB/wE7AYwBAAH/ATsBjAEAAf8BOwGMAQAB/wE7AYwBAAH/ATsBjAEAAf8BOwGMAQAB/wE7
-        AYwBAAH/ATsBjAEAAf8BOwGMAQAB/wE7AYwBAAH/AVQBnAESAf8B7wH3Ae8B/wQAAUIBTQE+BwABPgMA
-        ASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAL/AeMB/wHgAQMBgAEAAfgBHwHAAQMB4AEDAgABwAEP
-        AcABAQHgAQMDAAEDAYABAAHgAQMDAAEBAYABAAHgAQMEAAGAAQEB4AEDBAABgAEHAeABAwIAAeABAAGA
-        AQ8B4AEDAgAB/AEHAYABHwHgAQMCAAL/AYABHwHgAQMCAAL/AYABHwHgAQMCAAL/AYABHwHgAQMCAAL/
-        AYABHwHqAYcCAAL/AYABHwHgAQ8CAAL/AYABHwL/AYABAAL/AY8D/wHAAQEL
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAG
+        EQAAAk1TRnQBSQFMAgEBBAIAAQEBAAEBARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        ASADAAEBAQABIAYAASD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AG4AAd4B5wHvAf8BxgHW
+        Ad4B/wP3Af80AAPnAf8D1gH/A9YB/wPWAf8D1gH/A9YB/wPWAf8D1gH/A9YB/wPWAf8D5wH/DAABvQHO
+        AaUB/wEyAYQBAAH/ATIBhAEAAf8BMgGEAQAB/wEyAYQBAAH/ATIBhAEAAf8BMgGEAQAB/wEyAYQBAAH/
+        ATIBhAEAAf8BMgGEAQAB/wEyAYQBAAH/ATIBhAEAAf8BMgGEAQAB/wEyAYQBAAX/FAAI/wP3Af8BtQKt
+        Af8DtQX/HAAE/wFbAd4B9wH/AZwB1gHnAf8BzgLWAf8B5wLvAf8B5wLvAf8BvQHeAecB/wGMAdYB7wH/
+        AVMBzgHnAf8B5wLvCf8UAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHW
+        Ac4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAAe8B9wHvAf8BMgGEAQAB/wEy
+        AYQBAAH/ATIBhAEAAf8BKgFbAQAB/wFLAZQBAQH/AUMBlAEBAf8BQwGMAQEB/wFDAYwBAQH/AToBhAEB
+        Af8BOgGEAQEB/wE6AVsBAQH/ASIBWwEAAf8BMgGEAQAB/wEyAYQBAAH/ATIBhAEAAf8IAAj/A60B/wHG
+        Ar0B/wOtAf8BvQGtAbUB/wEAAaUBKgH/AaUBnAGlAf8DWwH/A/cB/xgAAZQB1gHvAf8BUwHeAfcB/wGc
+        AdYB5wH/AToBlAGtAf8BQwG1AcYB/wE6Ab0B1gH/ATIBxgHeAf8BKgHOAe8B/wE6Ac4B3gH/AYQB1gHv
+        Af8D5wH/A/cF/xAAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
+        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABUwGcAREB/wEyAYQBAAH/ATIBhAEA
+        Af8BKgFbAQAB/wLnAd4F/wP3Af8D9wH/A+8B/wPvAf8D5wX/ASoBWwEAAf8BMgGEAQAB/wEyAYQBAAH/
+        ATIBhAEABf8BzgLGAf8DtQH/Ab0CtQH/AecC3gH/AfcC7wH/Ad4C1gH/Ac4BtQG9Af8BAAHeATIB/wOc
+        Af8DWwH/A4QB/wOtBf8MAAHGAd4B7wH/AVsB3gL/AVMB3gH3Af8BpQHWAecB/wEiAZQBrQH/AToBtQHO
+        Af8BOgG9AdYB/wEyAcYB3gH/ASoBzgHvAf8BQwHWAe8B/wGEAd4B7wH/A+8B/wP3Cf8MAAH3Ae8B5wH/
+        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHW
+        Ac4B/wHnAdYBzgH/A9YB/wgAAToBjAEAAf8BMgGEAQAB/wEyAYQBAAH/AUMBjAEJAf8D9wH/AvcB7wH/
+        A/cB/wP3Af8D7wH/A+8B/wPvBf8D9wH/ASIBUwEAAf8BMgGEAQAB/wEyAYQBAAH/A60B/wHWAs4B/wHv
+        At4C/wL3Av8C9wL/AvcB/wHWAs4B/wGlApwB/wOMAf8D7wH/A+cB/wOcAf8DhAH/A1MB/wPvAf8IAAGl
+        AdYB7wH/AYQB3gL/AYQB5wL/AaUB1gHvAf8BIgGUAa0B/wE6AbUBxgH/AToBvQHWAf8BOgHGAecB/wEy
+        Ac4B7wH/AUsB1gHvAf8BjAHeAe8B/wP3Df8MAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
+        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAAToBjAEA
+        Af8BMgGEAQAB/wEqAVsBAAH/A/cB/wP3Af8D9wH/A/cB/wP3Af8D7wH/A+8B/wHeAecB1gH/A/cB/wP3
+        Af8BWwGcASoB/wEqAYQBAAH/ATIBhAEAAf8DpQH/Ac4CxgH/A70B/wGtAqUB/wOlAf8DvQH/A84B/wPO
+        Af8DvQH/A7UB/wO9Af8D7wH/A94B/wOUAf8DnAH/A9YB/wQAAaUB1gHvAf8BjAHnAv8BjAHnAv8BnAHe
+        Ae8B/wEqAZQBrQH/AToBrQHGAf8BQwHGAdYB/wFDAc4B5wH/AUMB1gHvAf8BUwHeAe8B/wGMAd4B7w3/
+        EAAB9wHvAecB/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
+        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAE6AYwBAAH/ATIBhAEAAf8BnAG9AVMB/wP3Af8D9wH/
+        A/cB/wP3Af8D9wH/A+8B/wEqAVsBAAH/ASoBhAEAAf8D9wH/A/cB/wP3Af8BKgFbAQAB/wEyAYQBAAX/
+        A70B/wLOAdYF/wPeAf8D3gH/Ae8C5wH/AecC3gH/A9YB/wPOAf8DxgH/Aq0BpQH/A5QF/wPeAf8D1gH/
+        BAABrQHeAe8B/wGUAecC/wGcAe8C/wGUAe8C/wEqAZQBrQH/AToBrQHGAf8BSwHGAd4B/wFLAc4B5wH/
+        AUsB1gHvAf8BhAHeAfcB/wHOAecB7wX/GAAB9wHvAecB/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
+        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAE6AYwBAAH/
+        ASoBhAEACf8D9wH/A/cB/wP3Af8B1gHeAc4B/wEqAVsBAAH/AYwBrQE6Af8BMgGEAQAB/wP3Af8C9wHv
+        Af8D7wH/Aa0BxgGUAf8BKgGEAQAB/wwAA+cB/wO9Af8B5wLvDf8D7wH/A+cB/wPeAf8DzgH/A70B/wPe
+        Af8D9wH/BAABrQHeAe8B/wGcAecC/wGlAfcC/wGtAfcC/wEqAZQBrQH/AUMBrQHGAf8BUwHGAd4B/wFb
+        AdYB5wH/AVsB3gH3Af8BpQHnAfcF/xwAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHW
+        Ac4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABOgGMAQAB/wHW
+        AecBxg3/AUMBjAEAAf8BKgGEAQAB/wGUAa0BQwH/A/cB/wP3Af8C9wHvAf8D7wH/A+8B/wPvAf8D7wH/
+        ASoBWwEAAf8YAAPWAf8DvQH/A1sB/wG1Ar0B/wPGAf8D3gH/A+8B/xAAAa0B3gHvAf8BnAHvAv8BrQH3
+        Av8BxgH3Av8BMgGcAbUB/wFLAbUBxgH/AVsBzgHeAf8BhAHWAe8B/wGEAd4B9wH/Aa0B7wH3Af8gAAH3
+        Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
+        Af8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAAToBjAEAAf8BQwGEARkB/wPvAf8D7wH/A+8B/wGMAa0BOgH/
+        ASoBWwEAAf8BMgGEAQAB/wGtAcYBjAH/A/cB/wL3Ae8B/wP3Af8D9wn/ASIBUwEAAf9EAAG1Ad4B9wH/
+        AZwB7wL/AbUB9wL/AdYD/wEyAZwBtQH/AUsBtQHOAf8BhAHOAd4B/wGMAd4B7wH/AZQB5wH3Af8BvQHv
+        Av8gAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
+        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAAToBjAEAAf8BIgFLAQAB/wHnAe8B5wH/A+8B/wL3
+        Ae8B/wP3Af8D9wH/A/cB/wHOAd4BvQH/ASoBWwEAAf8BKgGEAQAB/wP3Af8D9wH/A/cB/wE6AYQBAAH/
+        ATIBhAEAAf9EAAG1AecB9wH/AZwB7wL/AbUB9wL/Ad4D/wE6AZwBtQH/AVMBvQHOAf8BjAHWAecB/wGU
+        Ad4B7wH/AZwB5wH3Af8BzgH3Av8gABz/A7UB/wOtAf8DrQH/A+8B/wgAAToBjAEAAf8BMgGEAQAB/wEq
+        AVMBAAH/A/cB/wP3Af8D9wH/A/cB/wP3Af8D9wH/AVsBpQEiAf8BKgFbAQAB/wL3Ae8B/wP3Af8C5wHW
+        Af8BKgFbAQAB/wEyAYQBAAH/RAABtQHnAfcB/wGcAe8C/wG1AfcG/wFDAaUBvQH/AYQBxgHWAf8BlAHW
+        AecB/wGcAd4B7wH/AaUB5wH3Af8BzgH3Av8gABz/A84B/wPvAf8D1gX/CAABOgGMAQAB/wEyAYQBAAH/
+        ASoBWwEAAf8BzgHWAb0B/wP3Af8D9wH/A+8B/wP3Af8D9wH/A/cB/wL3Ae8B/wPvAf8D7wH/ASoBUwEA
+        Af8BMgGEAQAB/wEyAYQBAAH/RAABvQHnAfcB/wGcAe8C/wG1AfcG/wFTAbUBxgH/AYwBzgHeAf8BpQHn
+        AfcB/wGtAe8B9wH/Aa0B7wH3Af8B1gH3Av8gAAT/BAAE/wQABP8EAAT/A8YB/wPOBf8MAAE6AYwBAAH/
+        ATIBhAEAAf8BMgGEAQAB/wEiAVMBAAX/A/cB/wPvAf8D9wH/A/cB/wP3Bf8D7wH/Aa0BxgGUAf8BKgGE
+        AQAB/wEyAYQBAAH/ATIBhAEAAf9EAAG9AecB9wH/AZwB7wL/Ac4D/wGcAc4B3gH/AZQB3gHnAf8BrQHv
+        AfcB/wG1Ae8C/wHGAfcC/wHeA/8B3gP/IAAD1gH/A/cB/wPWAf8D9wH/A9YB/wP3Af8D1gH/A8YF/xAA
+        Aa0BxgGMAf8BMgGEAQAB/wEyAYQBAAH/ASoBhAEAAf8BnAG1AVMB/wPvAf8D7wH/A/cB/wP3Af8D9wX/
+        A/cB/wEqAVsBAAH/ATIBhAEAAf8BMgGEAQAB/wEyAYQBAAH/RAABvQHnAfcB/wG1AfcC/wGlAd4B5wH/
+        Ab0B7wH3Af8BvQH3Av8BrQHvAfcB/wGUAecB9wH/AcYC7wH/AecC9wX/WAABMgGEAQAB/wEyAYQBAAH/
+        ATIBhAEAAf8BKgFbAQAB/wEqAVsBAAH/ASoBWwEAAf8BKgFbAQAB/wEqAVsBAAH/ASoBUwEAAf8BIgFT
+        AQAB/wEiAVMBAAH/ASoBhAEAAf8BMgGEAQAB/wEyAYQBAAH/Ab0BzgGlAf9EAAH3A/8B3gHvAfcF/3gA
+        Aa0BxgGMAf8BOgGMAQAB/wE6AYwBAAH/AToBjAEAAf8BOgGMAQAB/wE6AYwBAAH/AToBjAEAAf8BOgGM
+        AQAB/wE6AYwBAAH/AToBjAEAAf8BOgGMAQAB/wFTAZwBEQH/Ae8B9wHvAf8EAAFCAU0BPgcAAT4DAAEo
+        AwABQAMAASADAAEBAQABAQYAAQEWAAP/gQAC/wHjAf8B4AEDAYABAAH4AR8BwAEDAeABAwIAAcABDwHA
+        AQEB4AEDAwABAwGAAQAB4AEDAwABAQGAAQAB4AEDBAABgAEBAeABAwQAAYABBwHgAQMCAAHgAQABgAEP
+        AeABAwIAAfwBBwGAAR8B4AEDAgAC/wGAAR8B4AEDAgAC/wGAAR8B4AEDAgAC/wGAAR8B4AEDAgAC/wGA
+        AR8B6gGHAgAC/wGAAR8B4AEPAgAC/wGAAR8C/wGAAQAC/wGPA/8BwAEBCw==
 </value>
   </data>
   <metadata name="toolStripTreeView.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>175, 12</value>
+  </metadata>
+  <metadata name="toolStripRight.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>379, 13</value>
   </metadata>
   <metadata name="toolStripRight.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>379, 13</value>
