--- a/src/WebDAV-AudioPlayer/UI/MainForm.resx
+++ b/src/WebDAV-AudioPlayer/UI/MainForm.resx
@@ -125,75 +125,75 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAI
-        EQAAAk1TRnQBSQFMAgEBBAEAARABAQEQAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        EQAAAk1TRnQBSQFMAgEBBAEAASgBAQEoAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AbgAB3gHnAe8B/wHG
         AdYB3gH/A/cB/zQAA+cB/wPWAf8D1gH/A9YB/wPWAf8D1gH/A9YB/wPWAf8D1gH/A9YB/wPnAf8MAAG9
-        Ac4BpQH/ATABhAEAAf8BMAGEAQAB/wEwAYQBAAH/ATABhAEAAf8BMAGEAQAB/wEwAYQBAAH/ATABhAEA
-        Af8BMAGEAQAB/wEwAYQBAAH/ATABhAEAAf8BMAGEAQAB/wEwAYQBAAH/ATABhAEABf8UAAj/A/cB/wG1
-        Aq0B/wO1Bf8cAAT/AVkB3gH3Af8BnAHWAecB/wHOAtYB/wHnAu8B/wHnAu8B/wG9Ad4B5wH/AYwB1gHv
-        Af8BUQHOAecB/wHnAu8J/xQAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
-        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAAB7wH3Ae8B/wEwAYQBAAH/
-        ATABhAEAAf8BMAGEAQAB/wEoAVkBAAH/AUkBlAEAAf8BQQGUAQAB/wFBAYwBAAH/AUEBjAEAAf8BOAGE
-        AQAB/wE4AYQBAAH/ATgBWQEAAf8BIAFZAQAB/wEwAYQBAAH/ATABhAEAAf8BMAGEAQAB/wgACP8DrQH/
-        AcYCvQH/A60B/wG9Aa0BtQH/AQABpQEoAf8BpQGcAaUB/wNZAf8D9wH/GAABlAHWAe8B/wFRAd4B9wH/
-        AZwB1gHnAf8BOAGUAa0B/wFBAbUBxgH/ATgBvQHWAf8BMAHGAd4B/wEoAc4B7wH/ATgBzgHeAf8BhAHW
+        Ac4BpQH/AS0BhAEAAf8BLQGEAQAB/wEtAYQBAAH/AS0BhAEAAf8BLQGEAQAB/wEtAYQBAAH/AS0BhAEA
+        Af8BLQGEAQAB/wEtAYQBAAH/AS0BhAEAAf8BLQGEAQAB/wEtAYQBAAH/AS0BhAEABf8UAAj/A/cB/wG1
+        Aq0B/wO1Bf8cAAT/AVYB3gH3Af8BnAHWAecB/wHOAtYB/wHnAu8B/wHnAu8B/wG9Ad4B5wH/AYwB1gHv
+        Af8BTgHOAecB/wHnAu8J/xQAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
+        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAAB7wH3Ae8B/wEtAYQBAAH/
+        AS0BhAEAAf8BLQGEAQAB/wElAVYBAAH/AUYBlAEAAf8BPgGUAQAB/wE+AYwBAAH/AT4BjAEAAf8BNQGE
+        AQAB/wE1AYQBAAH/ATUBVgEAAf8BHQFWAQAB/wEtAYQBAAH/AS0BhAEAAf8BLQGEAQAB/wgACP8DrQH/
+        AcYCvQH/A60B/wG9Aa0BtQH/AQABpQElAf8BpQGcAaUB/wNWAf8D9wH/GAABlAHWAe8B/wFOAd4B9wH/
+        AZwB1gHnAf8BNQGUAa0B/wE+AbUBxgH/ATUBvQHWAf8BLQHGAd4B/wElAc4B7wH/ATUBzgHeAf8BhAHW
         Ae8B/wPnAf8D9wX/EAAB9wHvAecB/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
-        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAFRAZwBDwH/ATABhAEAAf8BMAGE
-        AQAB/wEoAVkBAAH/AucB3gX/A/cB/wP3Af8D7wH/A+8B/wPnBf8BKAFZAQAB/wEwAYQBAAH/ATABhAEA
-        Af8BMAGEAQAF/wHOAsYB/wO1Af8BvQK1Af8B5wLeAf8B9wLvAf8B3gLWAf8BzgG1Ab0B/wEAAd4BMAH/
-        A5wB/wNZAf8DhAH/A60F/wwAAcYB3gHvAf8BWQHeAv8BUQHeAfcB/wGlAdYB5wH/ASABlAGtAf8BOAG1
-        Ac4B/wE4Ab0B1gH/ATABxgHeAf8BKAHOAe8B/wFBAdYB7wH/AYQB3gHvAf8D7wH/A/cJ/wwAAfcB7wHn
+        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAFOAZwBDAH/AS0BhAEAAf8BLQGE
+        AQAB/wElAVYBAAH/AucB3gX/A/cB/wP3Af8D7wH/A+8B/wPnBf8BJQFWAQAB/wEtAYQBAAH/AS0BhAEA
+        Af8BLQGEAQAF/wHOAsYB/wO1Af8BvQK1Af8B5wLeAf8B9wLvAf8B3gLWAf8BzgG1Ab0B/wEAAd4BLQH/
+        A5wB/wNWAf8DhAH/A60F/wwAAcYB3gHvAf8BVgHeAv8BTgHeAfcB/wGlAdYB5wH/AR0BlAGtAf8BNQG1
+        Ac4B/wE1Ab0B1gH/AS0BxgHeAf8BJQHOAe8B/wE+AdYB7wH/AYQB3gHvAf8D7wH/A/cJ/wwAAfcB7wHn
         Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
-        AdYBzgH/AecB1gHOAf8D1gH/CAABOAGMAQAB/wEwAYQBAAH/ATABhAEAAf8BQQGMAQcB/wP3Af8C9wHv
-        Af8D9wH/A/cB/wPvAf8D7wH/A+8F/wP3Af8BIAFRAQAB/wEwAYQBAAH/ATABhAEAAf8DrQH/AdYCzgH/
-        Ae8C3gL/AvcC/wL3Av8C9wH/AdYCzgH/AaUCnAH/A4wB/wPvAf8D5wH/A5wB/wOEAf8DUQH/A+8B/wgA
-        AaUB1gHvAf8BhAHeAv8BhAHnAv8BpQHWAe8B/wEgAZQBrQH/ATgBtQHGAf8BOAG9AdYB/wE4AcYB5wH/
-        ATABzgHvAf8BSQHWAe8B/wGMAd4B7wH/A/cN/wwAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
-        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABOAGM
-        AQAB/wEwAYQBAAH/ASgBWQEAAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wPvAf8D7wH/Ad4B5wHWAf8D9wH/
-        A/cB/wFZAZwBKAH/ASgBhAEAAf8BMAGEAQAB/wOlAf8BzgLGAf8DvQH/Aa0CpQH/A6UB/wO9Af8DzgH/
+        AdYBzgH/AecB1gHOAf8D1gH/CAABNQGMAQAB/wEtAYQBAAH/AS0BhAEAAf8BPgGMAQQB/wP3Af8C9wHv
+        Af8D9wH/A/cB/wPvAf8D7wH/A+8F/wP3Af8BHQFOAQAB/wEtAYQBAAH/AS0BhAEAAf8DrQH/AdYCzgH/
+        Ae8C3gL/AvcC/wL3Av8C9wH/AdYCzgH/AaUCnAH/A4wB/wPvAf8D5wH/A5wB/wOEAf8DTgH/A+8B/wgA
+        AaUB1gHvAf8BhAHeAv8BhAHnAv8BpQHWAe8B/wEdAZQBrQH/ATUBtQHGAf8BNQG9AdYB/wE1AcYB5wH/
+        AS0BzgHvAf8BRgHWAe8B/wGMAd4B7wH/A/cN/wwAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
+        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABNQGM
+        AQAB/wEtAYQBAAH/ASUBVgEAAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wPvAf8D7wH/Ad4B5wHWAf8D9wH/
+        A/cB/wFWAZwBJQH/ASUBhAEAAf8BLQGEAQAB/wOlAf8BzgLGAf8DvQH/Aa0CpQH/A6UB/wO9Af8DzgH/
         A84B/wO9Af8DtQH/A70B/wPvAf8D3gH/A5QB/wOcAf8D1gH/BAABpQHWAe8B/wGMAecC/wGMAecC/wGc
-        Ad4B7wH/ASgBlAGtAf8BOAGtAcYB/wFBAcYB1gH/AUEBzgHnAf8BQQHWAe8B/wFRAd4B7wH/AYwB3gHv
+        Ad4B7wH/ASUBlAGtAf8BNQGtAcYB/wE+AcYB1gH/AT4BzgHnAf8BPgHWAe8B/wFOAd4B7wH/AYwB3gHv
         Df8QAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
-        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAATgBjAEAAf8BMAGEAQAB/wGcAb0BUQH/A/cB/wP3
-        Af8D9wH/A/cB/wP3Af8D7wH/ASgBWQEAAf8BKAGEAQAB/wP3Af8D9wH/A/cB/wEoAVkBAAH/ATABhAEA
+        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAATUBjAEAAf8BLQGEAQAB/wGcAb0BTgH/A/cB/wP3
+        Af8D9wH/A/cB/wP3Af8D7wH/ASUBVgEAAf8BJQGEAQAB/wP3Af8D9wH/A/cB/wElAVYBAAH/AS0BhAEA
         Bf8DvQH/As4B1gX/A94B/wPeAf8B7wLnAf8B5wLeAf8D1gH/A84B/wPGAf8CrQGlAf8DlAX/A94B/wPW
-        Af8EAAGtAd4B7wH/AZQB5wL/AZwB7wL/AZQB7wL/ASgBlAGtAf8BOAGtAcYB/wFJAcYB3gH/AUkBzgHn
-        Af8BSQHWAe8B/wGEAd4B9wH/Ac4B5wHvBf8YAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
-        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAATgBjAEA
-        Af8BKAGEAQAJ/wP3Af8D9wH/A/cB/wHWAd4BzgH/ASgBWQEAAf8BjAGtATgB/wEwAYQBAAH/A/cB/wL3
-        Ae8B/wPvAf8BrQHGAZQB/wEoAYQBAAH/DAAD5wH/A70B/wHnAu8N/wPvAf8D5wH/A94B/wPOAf8DvQH/
-        A94B/wP3Af8EAAGtAd4B7wH/AZwB5wL/AaUB9wL/Aa0B9wL/ASgBlAGtAf8BQQGtAcYB/wFRAcYB3gH/
-        AVkB1gHnAf8BWQHeAfcB/wGlAecB9wX/HAAB9wHvAecB/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
-        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAE4AYwBAAH/
-        AdYB5wHGDf8BQQGMAQAB/wEoAYQBAAH/AZQBrQFBAf8D9wH/A/cB/wL3Ae8B/wPvAf8D7wH/A+8B/wPv
-        Af8BKAFZAQAB/xgAA9YB/wO9Af8DWQH/AbUCvQH/A8YB/wPeAf8D7wH/EAABrQHeAe8B/wGcAe8C/wGt
-        AfcC/wHGAfcC/wEwAZwBtQH/AUkBtQHGAf8BWQHOAd4B/wGEAdYB7wH/AYQB3gH3Af8BrQHvAfcB/yAA
+        Af8EAAGtAd4B7wH/AZQB5wL/AZwB7wL/AZQB7wL/ASUBlAGtAf8BNQGtAcYB/wFGAcYB3gH/AUYBzgHn
+        Af8BRgHWAe8B/wGEAd4B9wH/Ac4B5wHvBf8YAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
+        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAATUBjAEA
+        Af8BJQGEAQAJ/wP3Af8D9wH/A/cB/wHWAd4BzgH/ASUBVgEAAf8BjAGtATUB/wEtAYQBAAH/A/cB/wL3
+        Ae8B/wPvAf8BrQHGAZQB/wElAYQBAAH/DAAD5wH/A70B/wHnAu8N/wPvAf8D5wH/A94B/wPOAf8DvQH/
+        A94B/wP3Af8EAAGtAd4B7wH/AZwB5wL/AaUB9wL/Aa0B9wL/ASUBlAGtAf8BPgGtAcYB/wFOAcYB3gH/
+        AVYB1gHnAf8BVgHeAfcB/wGlAecB9wX/HAAB9wHvAecB/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
+        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAE1AYwBAAH/
+        AdYB5wHGDf8BPgGMAQAB/wElAYQBAAH/AZQBrQE+Af8D9wH/A/cB/wL3Ae8B/wPvAf8D7wH/A+8B/wPv
+        Af8BJQFWAQAB/xgAA9YB/wO9Af8DVgH/AbUCvQH/A8YB/wPeAf8D7wH/EAABrQHeAe8B/wGcAe8C/wGt
+        AfcC/wHGAfcC/wEtAZwBtQH/AUYBtQHGAf8BVgHOAd4B/wGEAdYB7wH/AYQB3gH3Af8BrQHvAfcB/yAA
         AfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHW
-        Ac4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABOAGMAQAB/wFBAYQBFwH/A+8B/wPvAf8D7wH/AYwBrQE4
-        Af8BKAFZAQAB/wEwAYQBAAH/Aa0BxgGMAf8D9wH/AvcB7wH/A/cB/wP3Cf8BIAFRAQAB/0QAAbUB3gH3
-        Af8BnAHvAv8BtQH3Av8B1gP/ATABnAG1Af8BSQG1Ac4B/wGEAc4B3gH/AYwB3gHvAf8BlAHnAfcB/wG9
+        Ac4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABNQGMAQAB/wE+AYQBFAH/A+8B/wPvAf8D7wH/AYwBrQE1
+        Af8BJQFWAQAB/wEtAYQBAAH/Aa0BxgGMAf8D9wH/AvcB7wH/A/cB/wP3Cf8BHQFOAQAB/0QAAbUB3gH3
+        Af8BnAHvAv8BtQH3Av8B1gP/AS0BnAG1Af8BRgG1Ac4B/wGEAc4B3gH/AYwB3gHvAf8BlAHnAfcB/wG9
         Ae8C/yAAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
-        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABOAGMAQAB/wEgAUkBAAH/AecB7wHnAf8D7wH/
-        AvcB7wH/A/cB/wP3Af8D9wH/Ac4B3gG9Af8BKAFZAQAB/wEoAYQBAAH/A/cB/wP3Af8D9wH/ATgBhAEA
-        Af8BMAGEAQAB/0QAAbUB5wH3Af8BnAHvAv8BtQH3Av8B3gP/ATgBnAG1Af8BUQG9Ac4B/wGMAdYB5wH/
-        AZQB3gHvAf8BnAHnAfcB/wHOAfcC/yAAHP8DtQH/A60B/wOtAf8D7wH/CAABOAGMAQAB/wEwAYQBAAH/
-        ASgBUQEAAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wP3Af8BWQGlASAB/wEoAVkBAAH/AvcB7wH/A/cB/wLn
-        AdYB/wEoAVkBAAH/ATABhAEAAf9EAAG1AecB9wH/AZwB7wL/AbUB9wb/AUEBpQG9Af8BhAHGAdYB/wGU
-        AdYB5wH/AZwB3gHvAf8BpQHnAfcB/wHOAfcC/yAAHP8DzgH/A+8B/wPWBf8IAAE4AYwBAAH/ATABhAEA
-        Af8BKAFZAQAB/wHOAdYBvQH/A/cB/wP3Af8D7wH/A/cB/wP3Af8D9wH/AvcB7wH/A+8B/wPvAf8BKAFR
-        AQAB/wEwAYQBAAH/ATABhAEAAf9EAAG9AecB9wH/AZwB7wL/AbUB9wb/AVEBtQHGAf8BjAHOAd4B/wGl
-        AecB9wH/Aa0B7wH3Af8BrQHvAfcB/wHWAfcC/yAABP8EAAT/BAAE/wQABP8DxgH/A84F/wwAATgBjAEA
-        Af8BMAGEAQAB/wEwAYQBAAH/ASABUQEABf8D9wH/A+8B/wP3Af8D9wH/A/cF/wPvAf8BrQHGAZQB/wEo
-        AYQBAAH/ATABhAEAAf8BMAGEAQAB/0QAAb0B5wH3Af8BnAHvAv8BzgP/AZwBzgHeAf8BlAHeAecB/wGt
+        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABNQGMAQAB/wEdAUYBAAH/AecB7wHnAf8D7wH/
+        AvcB7wH/A/cB/wP3Af8D9wH/Ac4B3gG9Af8BJQFWAQAB/wElAYQBAAH/A/cB/wP3Af8D9wH/ATUBhAEA
+        Af8BLQGEAQAB/0QAAbUB5wH3Af8BnAHvAv8BtQH3Av8B3gP/ATUBnAG1Af8BTgG9Ac4B/wGMAdYB5wH/
+        AZQB3gHvAf8BnAHnAfcB/wHOAfcC/yAAHP8DtQH/A60B/wOtAf8D7wH/CAABNQGMAQAB/wEtAYQBAAH/
+        ASUBTgEAAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wP3Af8BVgGlAR0B/wElAVYBAAH/AvcB7wH/A/cB/wLn
+        AdYB/wElAVYBAAH/AS0BhAEAAf9EAAG1AecB9wH/AZwB7wL/AbUB9wb/AT4BpQG9Af8BhAHGAdYB/wGU
+        AdYB5wH/AZwB3gHvAf8BpQHnAfcB/wHOAfcC/yAAHP8DzgH/A+8B/wPWBf8IAAE1AYwBAAH/AS0BhAEA
+        Af8BJQFWAQAB/wHOAdYBvQH/A/cB/wP3Af8D7wH/A/cB/wP3Af8D9wH/AvcB7wH/A+8B/wPvAf8BJQFO
+        AQAB/wEtAYQBAAH/AS0BhAEAAf9EAAG9AecB9wH/AZwB7wL/AbUB9wb/AU4BtQHGAf8BjAHOAd4B/wGl
+        AecB9wH/Aa0B7wH3Af8BrQHvAfcB/wHWAfcC/yAABP8EAAT/BAAE/wQABP8DxgH/A84F/wwAATUBjAEA
+        Af8BLQGEAQAB/wEtAYQBAAH/AR0BTgEABf8D9wH/A+8B/wP3Af8D9wH/A/cF/wPvAf8BrQHGAZQB/wEl
+        AYQBAAH/AS0BhAEAAf8BLQGEAQAB/0QAAb0B5wH3Af8BnAHvAv8BzgP/AZwBzgHeAf8BlAHeAecB/wGt
         Ae8B9wH/AbUB7wL/AcYB9wL/Ad4D/wHeA/8gAAPWAf8D9wH/A9YB/wP3Af8D1gH/A/cB/wPWAf8DxgX/
-        EAABrQHGAYwB/wEwAYQBAAH/ATABhAEAAf8BKAGEAQAB/wGcAbUBUQH/A+8B/wPvAf8D9wH/A/cB/wP3
-        Bf8D9wH/ASgBWQEAAf8BMAGEAQAB/wEwAYQBAAH/ATABhAEAAf9EAAG9AecB9wH/AbUB9wL/AaUB3gHn
-        Af8BvQHvAfcB/wG9AfcC/wGtAe8B9wH/AZQB5wH3Af8BxgLvAf8B5wL3Bf9YAAEwAYQBAAH/ATABhAEA
-        Af8BMAGEAQAB/wEoAVkBAAH/ASgBWQEAAf8BKAFZAQAB/wEoAVkBAAH/ASgBWQEAAf8BKAFRAQAB/wEg
-        AVEBAAH/ASABUQEAAf8BKAGEAQAB/wEwAYQBAAH/ATABhAEAAf8BvQHOAaUB/0QAAfcD/wHeAe8B9wX/
-        eAABrQHGAYwB/wE4AYwBAAH/ATgBjAEAAf8BOAGMAQAB/wE4AYwBAAH/ATgBjAEAAf8BOAGMAQAB/wE4
-        AYwBAAH/ATgBjAEAAf8BOAGMAQAB/wE4AYwBAAH/AVEBnAEPAf8B7wH3Ae8B/wQAAUIBTQE+BwABPgMA
+        EAABrQHGAYwB/wEtAYQBAAH/AS0BhAEAAf8BJQGEAQAB/wGcAbUBTgH/A+8B/wPvAf8D9wH/A/cB/wP3
+        Bf8D9wH/ASUBVgEAAf8BLQGEAQAB/wEtAYQBAAH/AS0BhAEAAf9EAAG9AecB9wH/AbUB9wL/AaUB3gHn
+        Af8BvQHvAfcB/wG9AfcC/wGtAe8B9wH/AZQB5wH3Af8BxgLvAf8B5wL3Bf9YAAEtAYQBAAH/AS0BhAEA
+        Af8BLQGEAQAB/wElAVYBAAH/ASUBVgEAAf8BJQFWAQAB/wElAVYBAAH/ASUBVgEAAf8BJQFOAQAB/wEd
+        AU4BAAH/AR0BTgEAAf8BJQGEAQAB/wEtAYQBAAH/AS0BhAEAAf8BvQHOAaUB/0QAAfcD/wHeAe8B9wX/
+        eAABrQHGAYwB/wE1AYwBAAH/ATUBjAEAAf8BNQGMAQAB/wE1AYwBAAH/ATUBjAEAAf8BNQGMAQAB/wE1
+        AYwBAAH/ATUBjAEAAf8BNQGMAQAB/wE1AYwBAAH/AU4BnAEMAf8B7wH3Ae8B/wQAAUIBTQE+BwABPgMA
         ASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAL/AeMB/wHgAQMBgAEAAfgBHwHAAQMB4AEDAgABwAEP
         AcABAQHgAQMDAAEDAYABAAHgAQMDAAEBAYABAAHgAQMEAAGAAQEB4AEDBAABgAEHAeABAwIAAeABAAGA
         AQ8B4AEDAgAB/AEHAYABHwHgAQMCAAL/AYABHwHgAQMCAAL/AYABHwHgAQMCAAL/AYABHwHgAQMCAAL/
@@ -202,9 +202,6 @@
   </data>
   <metadata name="toolStripTreeView.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>175, 12</value>
-  </metadata>
-  <metadata name="toolStripRight.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>379, 13</value>
   </metadata>
   <metadata name="toolStripRight.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>379, 13</value>
@@ -253,7 +250,13 @@
 </value>
   </data>
   <metadata name="audioPlaybackTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>685, 16</value>
+    <value>675, 13</value>
+  </metadata>
+  <metadata name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>506, 13</value>
+  </metadata>
+  <metadata name="contextMenuStripOnFolder.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>836, 13</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>45</value>
