--- a/src/WebDAV-AudioPlayer/UI/MainForm.resx
+++ b/src/WebDAV-AudioPlayer/UI/MainForm.resx
@@ -125,75 +125,75 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAI
-        EQAAAk1TRnQBSQFMAgEBBAEAASgBAQEoAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        EQAAAk1TRnQBSQFMAgEBBAEAATABAQEwAQEBEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
         AwABIAMAAQEBAAEgBgABIP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AbgAB3gHnAe8B/wHG
         AdYB3gH/A/cB/zQAA+cB/wPWAf8D1gH/A9YB/wPWAf8D1gH/A9YB/wPWAf8D1gH/A9YB/wPnAf8MAAG9
-        Ac4BpQH/AS0BhAEAAf8BLQGEAQAB/wEtAYQBAAH/AS0BhAEAAf8BLQGEAQAB/wEtAYQBAAH/AS0BhAEA
-        Af8BLQGEAQAB/wEtAYQBAAH/AS0BhAEAAf8BLQGEAQAB/wEtAYQBAAH/AS0BhAEABf8UAAj/A/cB/wG1
-        Aq0B/wO1Bf8cAAT/AVYB3gH3Af8BnAHWAecB/wHOAtYB/wHnAu8B/wHnAu8B/wG9Ad4B5wH/AYwB1gHv
-        Af8BTgHOAecB/wHnAu8J/xQAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
-        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAAB7wH3Ae8B/wEtAYQBAAH/
-        AS0BhAEAAf8BLQGEAQAB/wElAVYBAAH/AUYBlAEAAf8BPgGUAQAB/wE+AYwBAAH/AT4BjAEAAf8BNQGE
-        AQAB/wE1AYQBAAH/ATUBVgEAAf8BHQFWAQAB/wEtAYQBAAH/AS0BhAEAAf8BLQGEAQAB/wgACP8DrQH/
-        AcYCvQH/A60B/wG9Aa0BtQH/AQABpQElAf8BpQGcAaUB/wNWAf8D9wH/GAABlAHWAe8B/wFOAd4B9wH/
-        AZwB1gHnAf8BNQGUAa0B/wE+AbUBxgH/ATUBvQHWAf8BLQHGAd4B/wElAc4B7wH/ATUBzgHeAf8BhAHW
+        Ac4BpQH/ASwBhAEAAf8BLAGEAQAB/wEsAYQBAAH/ASwBhAEAAf8BLAGEAQAB/wEsAYQBAAH/ASwBhAEA
+        Af8BLAGEAQAB/wEsAYQBAAH/ASwBhAEAAf8BLAGEAQAB/wEsAYQBAAH/ASwBhAEABf8UAAj/A/cB/wG1
+        Aq0B/wO1Bf8cAAT/AVUB3gH3Af8BnAHWAecB/wHOAtYB/wHnAu8B/wHnAu8B/wG9Ad4B5wH/AYwB1gHv
+        Af8BTQHOAecB/wHnAu8J/xQAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
+        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAAB7wH3Ae8B/wEsAYQBAAH/
+        ASwBhAEAAf8BLAGEAQAB/wEkAVUBAAH/AUUBlAEAAf8BPQGUAQAB/wE9AYwBAAH/AT0BjAEAAf8BNAGE
+        AQAB/wE0AYQBAAH/ATQBVQEAAf8BHAFVAQAB/wEsAYQBAAH/ASwBhAEAAf8BLAGEAQAB/wgACP8DrQH/
+        AcYCvQH/A60B/wG9Aa0BtQH/AQABpQEkAf8BpQGcAaUB/wNVAf8D9wH/GAABlAHWAe8B/wFNAd4B9wH/
+        AZwB1gHnAf8BNAGUAa0B/wE9AbUBxgH/ATQBvQHWAf8BLAHGAd4B/wEkAc4B7wH/ATQBzgHeAf8BhAHW
         Ae8B/wPnAf8D9wX/EAAB9wHvAecB/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
-        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAFOAZwBDAH/AS0BhAEAAf8BLQGE
-        AQAB/wElAVYBAAH/AucB3gX/A/cB/wP3Af8D7wH/A+8B/wPnBf8BJQFWAQAB/wEtAYQBAAH/AS0BhAEA
-        Af8BLQGEAQAF/wHOAsYB/wO1Af8BvQK1Af8B5wLeAf8B9wLvAf8B3gLWAf8BzgG1Ab0B/wEAAd4BLQH/
-        A5wB/wNWAf8DhAH/A60F/wwAAcYB3gHvAf8BVgHeAv8BTgHeAfcB/wGlAdYB5wH/AR0BlAGtAf8BNQG1
-        Ac4B/wE1Ab0B1gH/AS0BxgHeAf8BJQHOAe8B/wE+AdYB7wH/AYQB3gHvAf8D7wH/A/cJ/wwAAfcB7wHn
+        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAFNAZwBCwH/ASwBhAEAAf8BLAGE
+        AQAB/wEkAVUBAAH/AucB3gX/A/cB/wP3Af8D7wH/A+8B/wPnBf8BJAFVAQAB/wEsAYQBAAH/ASwBhAEA
+        Af8BLAGEAQAF/wHOAsYB/wO1Af8BvQK1Af8B5wLeAf8B9wLvAf8B3gLWAf8BzgG1Ab0B/wEAAd4BLAH/
+        A5wB/wNVAf8DhAH/A60F/wwAAcYB3gHvAf8BVQHeAv8BTQHeAfcB/wGlAdYB5wH/ARwBlAGtAf8BNAG1
+        Ac4B/wE0Ab0B1gH/ASwBxgHeAf8BJAHOAe8B/wE9AdYB7wH/AYQB3gHvAf8D7wH/A/cJ/wwAAfcB7wHn
         Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
-        AdYBzgH/AecB1gHOAf8D1gH/CAABNQGMAQAB/wEtAYQBAAH/AS0BhAEAAf8BPgGMAQQB/wP3Af8C9wHv
-        Af8D9wH/A/cB/wPvAf8D7wH/A+8F/wP3Af8BHQFOAQAB/wEtAYQBAAH/AS0BhAEAAf8DrQH/AdYCzgH/
-        Ae8C3gL/AvcC/wL3Av8C9wH/AdYCzgH/AaUCnAH/A4wB/wPvAf8D5wH/A5wB/wOEAf8DTgH/A+8B/wgA
-        AaUB1gHvAf8BhAHeAv8BhAHnAv8BpQHWAe8B/wEdAZQBrQH/ATUBtQHGAf8BNQG9AdYB/wE1AcYB5wH/
-        AS0BzgHvAf8BRgHWAe8B/wGMAd4B7wH/A/cN/wwAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
-        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABNQGM
-        AQAB/wEtAYQBAAH/ASUBVgEAAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wPvAf8D7wH/Ad4B5wHWAf8D9wH/
-        A/cB/wFWAZwBJQH/ASUBhAEAAf8BLQGEAQAB/wOlAf8BzgLGAf8DvQH/Aa0CpQH/A6UB/wO9Af8DzgH/
+        AdYBzgH/AecB1gHOAf8D1gH/CAABNAGMAQAB/wEsAYQBAAH/ASwBhAEAAf8BPQGMAQMB/wP3Af8C9wHv
+        Af8D9wH/A/cB/wPvAf8D7wH/A+8F/wP3Af8BHAFNAQAB/wEsAYQBAAH/ASwBhAEAAf8DrQH/AdYCzgH/
+        Ae8C3gL/AvcC/wL3Av8C9wH/AdYCzgH/AaUCnAH/A4wB/wPvAf8D5wH/A5wB/wOEAf8DTQH/A+8B/wgA
+        AaUB1gHvAf8BhAHeAv8BhAHnAv8BpQHWAe8B/wEcAZQBrQH/ATQBtQHGAf8BNAG9AdYB/wE0AcYB5wH/
+        ASwBzgHvAf8BRQHWAe8B/wGMAd4B7wH/A/cN/wwAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
+        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABNAGM
+        AQAB/wEsAYQBAAH/ASQBVQEAAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wPvAf8D7wH/Ad4B5wHWAf8D9wH/
+        A/cB/wFVAZwBJAH/ASQBhAEAAf8BLAGEAQAB/wOlAf8BzgLGAf8DvQH/Aa0CpQH/A6UB/wO9Af8DzgH/
         A84B/wO9Af8DtQH/A70B/wPvAf8D3gH/A5QB/wOcAf8D1gH/BAABpQHWAe8B/wGMAecC/wGMAecC/wGc
-        Ad4B7wH/ASUBlAGtAf8BNQGtAcYB/wE+AcYB1gH/AT4BzgHnAf8BPgHWAe8B/wFOAd4B7wH/AYwB3gHv
+        Ad4B7wH/ASQBlAGtAf8BNAGtAcYB/wE9AcYB1gH/AT0BzgHnAf8BPQHWAe8B/wFNAd4B7wH/AYwB3gHv
         Df8QAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
-        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAATUBjAEAAf8BLQGEAQAB/wGcAb0BTgH/A/cB/wP3
-        Af8D9wH/A/cB/wP3Af8D7wH/ASUBVgEAAf8BJQGEAQAB/wP3Af8D9wH/A/cB/wElAVYBAAH/AS0BhAEA
+        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAATQBjAEAAf8BLAGEAQAB/wGcAb0BTQH/A/cB/wP3
+        Af8D9wH/A/cB/wP3Af8D7wH/ASQBVQEAAf8BJAGEAQAB/wP3Af8D9wH/A/cB/wEkAVUBAAH/ASwBhAEA
         Bf8DvQH/As4B1gX/A94B/wPeAf8B7wLnAf8B5wLeAf8D1gH/A84B/wPGAf8CrQGlAf8DlAX/A94B/wPW
-        Af8EAAGtAd4B7wH/AZQB5wL/AZwB7wL/AZQB7wL/ASUBlAGtAf8BNQGtAcYB/wFGAcYB3gH/AUYBzgHn
-        Af8BRgHWAe8B/wGEAd4B9wH/Ac4B5wHvBf8YAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
-        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAATUBjAEA
-        Af8BJQGEAQAJ/wP3Af8D9wH/A/cB/wHWAd4BzgH/ASUBVgEAAf8BjAGtATUB/wEtAYQBAAH/A/cB/wL3
-        Ae8B/wPvAf8BrQHGAZQB/wElAYQBAAH/DAAD5wH/A70B/wHnAu8N/wPvAf8D5wH/A94B/wPOAf8DvQH/
-        A94B/wP3Af8EAAGtAd4B7wH/AZwB5wL/AaUB9wL/Aa0B9wL/ASUBlAGtAf8BPgGtAcYB/wFOAcYB3gH/
-        AVYB1gHnAf8BVgHeAfcB/wGlAecB9wX/HAAB9wHvAecB/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
-        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAE1AYwBAAH/
-        AdYB5wHGDf8BPgGMAQAB/wElAYQBAAH/AZQBrQE+Af8D9wH/A/cB/wL3Ae8B/wPvAf8D7wH/A+8B/wPv
-        Af8BJQFWAQAB/xgAA9YB/wO9Af8DVgH/AbUCvQH/A8YB/wPeAf8D7wH/EAABrQHeAe8B/wGcAe8C/wGt
-        AfcC/wHGAfcC/wEtAZwBtQH/AUYBtQHGAf8BVgHOAd4B/wGEAdYB7wH/AYQB3gH3Af8BrQHvAfcB/yAA
+        Af8EAAGtAd4B7wH/AZQB5wL/AZwB7wL/AZQB7wL/ASQBlAGtAf8BNAGtAcYB/wFFAcYB3gH/AUUBzgHn
+        Af8BRQHWAe8B/wGEAd4B9wH/Ac4B5wHvBf8YAAH3Ae8B5wH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/
+        AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/A9YB/wgAATQBjAEA
+        Af8BJAGEAQAJ/wP3Af8D9wH/A/cB/wHWAd4BzgH/ASQBVQEAAf8BjAGtATQB/wEsAYQBAAH/A/cB/wL3
+        Ae8B/wPvAf8BrQHGAZQB/wEkAYQBAAH/DAAD5wH/A70B/wHnAu8N/wPvAf8D5wH/A94B/wPOAf8DvQH/
+        A94B/wP3Af8EAAGtAd4B7wH/AZwB5wL/AaUB9wL/Aa0B9wL/ASQBlAGtAf8BPQGtAcYB/wFNAcYB3gH/
+        AVUB1gHnAf8BVQHeAfcB/wGlAecB9wX/HAAB9wHvAecB/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHn
+        AdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wPWAf8IAAE0AYwBAAH/
+        AdYB5wHGDf8BPQGMAQAB/wEkAYQBAAH/AZQBrQE9Af8D9wH/A/cB/wL3Ae8B/wPvAf8D7wH/A+8B/wPv
+        Af8BJAFVAQAB/xgAA9YB/wO9Af8DVQH/AbUCvQH/A8YB/wPeAf8D7wH/EAABrQHeAe8B/wGcAe8C/wGt
+        AfcC/wHGAfcC/wEsAZwBtQH/AUUBtQHGAf8BVQHOAd4B/wGEAdYB7wH/AYQB3gH3Af8BrQHvAfcB/yAA
         AfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHW
-        Ac4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABNQGMAQAB/wE+AYQBFAH/A+8B/wPvAf8D7wH/AYwBrQE1
-        Af8BJQFWAQAB/wEtAYQBAAH/Aa0BxgGMAf8D9wH/AvcB7wH/A/cB/wP3Cf8BHQFOAQAB/0QAAbUB3gH3
-        Af8BnAHvAv8BtQH3Av8B1gP/AS0BnAG1Af8BRgG1Ac4B/wGEAc4B3gH/AYwB3gHvAf8BlAHnAfcB/wG9
+        Ac4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABNAGMAQAB/wE9AYQBEwH/A+8B/wPvAf8D7wH/AYwBrQE0
+        Af8BJAFVAQAB/wEsAYQBAAH/Aa0BxgGMAf8D9wH/AvcB7wH/A/cB/wP3Cf8BHAFNAQAB/0QAAbUB3gH3
+        Af8BnAHvAv8BtQH3Av8B1gP/ASwBnAG1Af8BRQG1Ac4B/wGEAc4B3gH/AYwB3gHvAf8BlAHnAfcB/wG9
         Ae8C/yAAAfcB7wHnAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8B5wHWAc4B/wHnAdYBzgH/AecB1gHO
-        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABNQGMAQAB/wEdAUYBAAH/AecB7wHnAf8D7wH/
-        AvcB7wH/A/cB/wP3Af8D9wH/Ac4B3gG9Af8BJQFWAQAB/wElAYQBAAH/A/cB/wP3Af8D9wH/ATUBhAEA
-        Af8BLQGEAQAB/0QAAbUB5wH3Af8BnAHvAv8BtQH3Av8B3gP/ATUBnAG1Af8BTgG9Ac4B/wGMAdYB5wH/
-        AZQB3gHvAf8BnAHnAfcB/wHOAfcC/yAAHP8DtQH/A60B/wOtAf8D7wH/CAABNQGMAQAB/wEtAYQBAAH/
-        ASUBTgEAAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wP3Af8BVgGlAR0B/wElAVYBAAH/AvcB7wH/A/cB/wLn
-        AdYB/wElAVYBAAH/AS0BhAEAAf9EAAG1AecB9wH/AZwB7wL/AbUB9wb/AT4BpQG9Af8BhAHGAdYB/wGU
-        AdYB5wH/AZwB3gHvAf8BpQHnAfcB/wHOAfcC/yAAHP8DzgH/A+8B/wPWBf8IAAE1AYwBAAH/AS0BhAEA
-        Af8BJQFWAQAB/wHOAdYBvQH/A/cB/wP3Af8D7wH/A/cB/wP3Af8D9wH/AvcB7wH/A+8B/wPvAf8BJQFO
-        AQAB/wEtAYQBAAH/AS0BhAEAAf9EAAG9AecB9wH/AZwB7wL/AbUB9wb/AU4BtQHGAf8BjAHOAd4B/wGl
-        AecB9wH/Aa0B7wH3Af8BrQHvAfcB/wHWAfcC/yAABP8EAAT/BAAE/wQABP8DxgH/A84F/wwAATUBjAEA
-        Af8BLQGEAQAB/wEtAYQBAAH/AR0BTgEABf8D9wH/A+8B/wP3Af8D9wH/A/cF/wPvAf8BrQHGAZQB/wEl
-        AYQBAAH/AS0BhAEAAf8BLQGEAQAB/0QAAb0B5wH3Af8BnAHvAv8BzgP/AZwBzgHeAf8BlAHeAecB/wGt
+        Af8B5wHWAc4B/wHnAdYBzgH/AecB1gHOAf8D1gH/CAABNAGMAQAB/wEcAUUBAAH/AecB7wHnAf8D7wH/
+        AvcB7wH/A/cB/wP3Af8D9wH/Ac4B3gG9Af8BJAFVAQAB/wEkAYQBAAH/A/cB/wP3Af8D9wH/ATQBhAEA
+        Af8BLAGEAQAB/0QAAbUB5wH3Af8BnAHvAv8BtQH3Av8B3gP/ATQBnAG1Af8BTQG9Ac4B/wGMAdYB5wH/
+        AZQB3gHvAf8BnAHnAfcB/wHOAfcC/yAAHP8DtQH/A60B/wOtAf8D7wH/CAABNAGMAQAB/wEsAYQBAAH/
+        ASQBTQEAAf8D9wH/A/cB/wP3Af8D9wH/A/cB/wP3Af8BVQGlARwB/wEkAVUBAAH/AvcB7wH/A/cB/wLn
+        AdYB/wEkAVUBAAH/ASwBhAEAAf9EAAG1AecB9wH/AZwB7wL/AbUB9wb/AT0BpQG9Af8BhAHGAdYB/wGU
+        AdYB5wH/AZwB3gHvAf8BpQHnAfcB/wHOAfcC/yAAHP8DzgH/A+8B/wPWBf8IAAE0AYwBAAH/ASwBhAEA
+        Af8BJAFVAQAB/wHOAdYBvQH/A/cB/wP3Af8D7wH/A/cB/wP3Af8D9wH/AvcB7wH/A+8B/wPvAf8BJAFN
+        AQAB/wEsAYQBAAH/ASwBhAEAAf9EAAG9AecB9wH/AZwB7wL/AbUB9wb/AU0BtQHGAf8BjAHOAd4B/wGl
+        AecB9wH/Aa0B7wH3Af8BrQHvAfcB/wHWAfcC/yAABP8EAAT/BAAE/wQABP8DxgH/A84F/wwAATQBjAEA
+        Af8BLAGEAQAB/wEsAYQBAAH/ARwBTQEABf8D9wH/A+8B/wP3Af8D9wH/A/cF/wPvAf8BrQHGAZQB/wEk
+        AYQBAAH/ASwBhAEAAf8BLAGEAQAB/0QAAb0B5wH3Af8BnAHvAv8BzgP/AZwBzgHeAf8BlAHeAecB/wGt
         Ae8B9wH/AbUB7wL/AcYB9wL/Ad4D/wHeA/8gAAPWAf8D9wH/A9YB/wP3Af8D1gH/A/cB/wPWAf8DxgX/
-        EAABrQHGAYwB/wEtAYQBAAH/AS0BhAEAAf8BJQGEAQAB/wGcAbUBTgH/A+8B/wPvAf8D9wH/A/cB/wP3
-        Bf8D9wH/ASUBVgEAAf8BLQGEAQAB/wEtAYQBAAH/AS0BhAEAAf9EAAG9AecB9wH/AbUB9wL/AaUB3gHn
-        Af8BvQHvAfcB/wG9AfcC/wGtAe8B9wH/AZQB5wH3Af8BxgLvAf8B5wL3Bf9YAAEtAYQBAAH/AS0BhAEA
-        Af8BLQGEAQAB/wElAVYBAAH/ASUBVgEAAf8BJQFWAQAB/wElAVYBAAH/ASUBVgEAAf8BJQFOAQAB/wEd
-        AU4BAAH/AR0BTgEAAf8BJQGEAQAB/wEtAYQBAAH/AS0BhAEAAf8BvQHOAaUB/0QAAfcD/wHeAe8B9wX/
-        eAABrQHGAYwB/wE1AYwBAAH/ATUBjAEAAf8BNQGMAQAB/wE1AYwBAAH/ATUBjAEAAf8BNQGMAQAB/wE1
-        AYwBAAH/ATUBjAEAAf8BNQGMAQAB/wE1AYwBAAH/AU4BnAEMAf8B7wH3Ae8B/wQAAUIBTQE+BwABPgMA
+        EAABrQHGAYwB/wEsAYQBAAH/ASwBhAEAAf8BJAGEAQAB/wGcAbUBTQH/A+8B/wPvAf8D9wH/A/cB/wP3
+        Bf8D9wH/ASQBVQEAAf8BLAGEAQAB/wEsAYQBAAH/ASwBhAEAAf9EAAG9AecB9wH/AbUB9wL/AaUB3gHn
+        Af8BvQHvAfcB/wG9AfcC/wGtAe8B9wH/AZQB5wH3Af8BxgLvAf8B5wL3Bf9YAAEsAYQBAAH/ASwBhAEA
+        Af8BLAGEAQAB/wEkAVUBAAH/ASQBVQEAAf8BJAFVAQAB/wEkAVUBAAH/ASQBVQEAAf8BJAFNAQAB/wEc
+        AU0BAAH/ARwBTQEAAf8BJAGEAQAB/wEsAYQBAAH/ASwBhAEAAf8BvQHOAaUB/0QAAfcD/wHeAe8B9wX/
+        eAABrQHGAYwB/wE0AYwBAAH/ATQBjAEAAf8BNAGMAQAB/wE0AYwBAAH/ATQBjAEAAf8BNAGMAQAB/wE0
+        AYwBAAH/ATQBjAEAAf8BNAGMAQAB/wE0AYwBAAH/AU0BnAELAf8B7wH3Ae8B/wQAAUIBTQE+BwABPgMA
         ASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/+BAAL/AeMB/wHgAQMBgAEAAfgBHwHAAQMB4AEDAgABwAEP
         AcABAQHgAQMDAAEDAYABAAHgAQMDAAEBAYABAAHgAQMEAAGAAQEB4AEDBAABgAEHAeABAwIAAeABAAGA
         AQ8B4AEDAgAB/AEHAYABHwHgAQMCAAL/AYABHwHgAQMCAAL/AYABHwHgAQMCAAL/AYABHwHgAQMCAAL/
@@ -202,6 +202,9 @@
   </data>
   <metadata name="toolStripTreeView.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>175, 12</value>
+  </metadata>
+  <metadata name="toolStripRight.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>379, 13</value>
   </metadata>
   <metadata name="toolStripRight.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>379, 13</value>
